# csgo-web-radar

./: .gitignore  .gitmodules  ;  LICENSE.md  README.md
host/: index.html  index.js  package-lock.json  package.json
provider/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  Makefile  build.ninja  build.sh  cmake_install.cmake  handle.cpp  handle.h  main  main.cpp  offsets.h  rules.ninja
provider/src/: offsets.h  process.cpp  process.h
